--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,25 @@ label.checked {
   text-decoration: line-through;
   color: rgb(90, 90, 90);
 }
+
 .header {
   margin-bottom: 1em;
 }
+
 .header>a {
   font-size: small;
 }
+
 .header>* {
   display: inline;
+}
+
+span.checked-count {
+  font-size: medium;
+  color: blue;
+  font-weight: bold;
+}
+
+span.checked-count.complete {
+  color: green;
 }
